--- a/main.ipynb
+++ b/main.ipynb
@@ -447,13 +447,7 @@
    "metadata": {},
    "source": [
     "#### Loading the `stories` dataframe\n",
-    "This dataframe is used for training model(s) for predicting the `topics` of the now-fetched paragraphs\n",
-    "\n",
-    "Note: I have trained a BERT model for predicting the `topics` in another notebook (colab) which is\n",
-    "included in the repo, but it has not yielded good results, as the `topics` labels are very sparse\n",
-    "(many zeros and few ones), hence the model will always try to output zeros, as it lowers the error\n",
-    "anyways. I have attempted to implement `positional weighting` technique for usage in BCEWithLogitsLoss\n",
-    "but still no good results were observed, so I sticked with vanilla `TF-IDF` method and RandomForest."
+    "This dataframe is used for training model(s) for predicting the `topics` of the now-fetched paragraphs"
    ]
   },
   {
@@ -1551,8 +1545,7 @@
    "metadata": {},
    "source": [
     "### UPDATE: Prediction Results using BERT Model\n",
-    "After training the BERT model using Huggingface's Trainer API over on Colab, the model's predictions are now\n",
-    "feasible and have been applied to the final dataframe. The results can be seen below."
+    "I have fine-tuned a BERT model on a seperate notebook over on Colab and have saved the results. Here we can see the predictions of the BERT model."
    ]
   },
   {
