clean some comments

--- a/topic_classification_BERT.ipynb
+++ b/topic_classification_BERT.ipynb
@@ -1,12 +1,13 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "9SaUupOE8kl9"
       },
       "source": [
-        "# Arash Hajian nezhad | DataCoLab Interview Task | BERT fine-tuning"
+        "# Arash Hajian nezhad | BERT fine-tuning"
       ]
     },
     {
